--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "type": "git",
     "url": "git+https://github.com/clairevita/PWA-Budget-Tracker"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Claire Vita",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/clairevita/PWA-Budget-Tracker"
   },
@@ -23,5 +23,9 @@
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.3.1",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
